--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
   <div class="main">
     <img src="images/image-qr-code.png" alt="qr-code">
     <div class="word">
-      <h2>Improve your front-end skills by building projects</h2>
+      <h2>Improve your front-end 
+        skills by building projects</h2>
 
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p>Scan the QR code to visit Frontend Mentor 
+        and take your coding skills to 
+        the next level</p>
     </div>
   </div>
 
