--- a/index.html
+++ b/index.html
@@ -9,30 +9,36 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | QR code component</title>
 
 </head>
 
 <body>
-  <div class="main">
-    <img src="images/image-qr-code.png" alt="qr-code">
-    <div class="word">
-      <h2>Improve your front-end 
-        skills by building projects</h2>
+  <main>
+    <div class="main">
+      <img src="images/image-qr-code.png" alt="qr-code">
+      <div class="word">
+        <h1>Improve your front-end
+          skills by building projects</h1>
 
-      <p>Scan the QR code to visit Frontend Mentor 
-        and take your coding skills to 
-        the next level</p>
+        <p>Scan the QR code to visit Frontend Mentor
+          and take your coding skills to
+          the next level</p>
+      </div>
     </div>
-  </div>
+  </main>
 
 
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="www.linkedin.com/in/princekr1729">Prince Kumar</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="www.linkedin.com/in/princekr1729">Prince Kumar</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
